fixed postscript containter overlap issue

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -13,5 +13,5 @@
     @media (max-width: 767px)
       @content
   @if $bp == smallest
-    @media (max-width: 500px)
+    @media (max-width: 550px)
       @content
