--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -114,28 +114,29 @@ header
 #postscript
   background-color: $secondarycolor
   color: $lighttextcolor
-  height: auto
   min-height: 120px
   position: relative
-  
-.postscript-right, .postscript-left
-  display: inline-block
+  +breakpoint(smallest)
+    min-height: 260px
   
 .postscript-left
-  width: 40%
+  width: 100%
   +stretch(10px, auto, 10px, 10px)
-  p
-    font-size: 110%
   +breakpoint(smaller)
     width: 95%
     +stretch(10px, 10px 10px 10px)
+  p
+    font-size: 110%
+  
 
 .postscript-right
-  width: 58%
+  width: 100%
   +stretch(10px, 10px, 10px, auto)
   +breakpoint(smaller)
     width: 95%
     +stretch(10px, 10px, 10px, 10px)
+  p
+    margin: 0
   
 footer
   background-color: $primarycolor
@@ -204,15 +205,41 @@ nav
   
 .ken-avatar
   padding: 10px
+  +breakpoint(smallest)
+    display: none
   img
     width: 100px
     float: left
     margin-right: 10px
     border-radius: 10px
 
+.contact-info
+  +breakpoint(smallest)
+    display: none
+
+.ken-avatar-right
+  display: none
+  +breakpoint(smallest)
+    display: inline-block
+      
+.contact-info-right
+  display: none
+  +breakpoint(smallest)
+    display: inline-block
+    margin: 10px 0 20px 10px
+    vertical-align: middle
+    img
+      width: 100px
+      float: left
+      border-radius: 10px
+    p
+      float: right
+      padding: 20px 0 0 10px
+    
 /*--------------------------------------------
  * SOCIAL ICONS
  ---------------------------------------------*/
+
 
 .social-text
   text-align: right
@@ -228,27 +255,27 @@ nav
     float: right
 
 .twitter, .facebook, .linkedin, .github
-  background: url("../images/social-icons.png")
+  background: url("../images/social-icons-200.png")
   display: block
-  height: 30px
-  width: 30px
+  height: 50px
+  width: 50px
   text-indent: -9999px
   
 .twitter
-  :hover
-    background-position: 0 -30px
+  &:hover
+    background-position: 0 -50px
 
 .facebook
-  background-position: -30px 0
-  :hover
-    background-position: -30px -30px
+  background-position: -50px 0
+  &:hover
+    background-position: -50px -50px
   
 .linkedin
-  background-position: -60px 0
-  :hover
-    background-position: -60px -30px
+  background-position: -100px 0
+  &:hover
+    background-position: -100px -50px
   
 .github
-  background-position: -90px 0
-  :hover
-    background-position: -90px -30px
+  background-position: -150px 0
+  &:hover
+    background-position: -150px -50px
